# kb-openapi

./: .gitattributes  .gitignore  README.md  pyproject.toml  start-openapi-prod.cmd  start-openapi-prod.sh  stop-openapi-prod.cmd  stop-openapi-prod.sh
backend/: __init__.py  main.py  settings.py
backend/routers/: __init__.py  config.py  openapi_test.py
backend/services/: __init__.py  openapi_test_defaults.py
config/brokers/kb/: endpoints.yaml
example/python/: .env.example  README.md  auth_example.py  common.py  investment_info_example.py
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/openapi-test/: page.tsx  samples.generated.json
frontend/src/components/openapi/: OpenApiTestClient.tsx
